--- a/modules/admin/config.json
+++ b/modules/admin/config.json
@@ -59,61 +59,63 @@
     "modules": {
         "alert": {
             "alert_ground_cam": {
-                "mqttServerIp": ["192", "168", "12", "104"],
+                "mqttServerIp": ["192", "168", "12", "12"],
                 "mac": ["90", "A2", "DA", "0F", "98", "27"]
             },
             "alert_1stfloor_cam": {
-                "mqttServerIp": ["192", "168", "12", "104"],
+                "mqttServerIp": ["192", "168", "12", "12"],
                 "mac": ["90", "A2", "DA", "0F", "98", "19"]
             },
             "alert_1stfloor_a": {
-                "mqttServerIp": ["192", "168", "12", "104"],
+                "mqttServerIp": ["192", "168", "12", "12"],
                 "mac": ["90", "A2", "DA", "0F", "96", "C9"]
             },
             "alert_1stfloor_b": {
-                "mqttServerIp": ["192", "168", "12", "104"],
+                "mqttServerIp": ["192", "168", "12", "12"],
                 "mac": ["90", "A2", "DA", "0F", "97", "66"]
             },
             "alert_1stfloor_c": {
-                "mqttServerIp": ["192", "168", "12", "104"],
+                "mqttServerIp": ["192", "168", "12", "12"],
                 "mac": ["90", "A2", "DA", "0F", "97", "03"]
             },
             "alert_1stfloor_d": {
-                "mqttServerIp": ["192", "168", "12", "104"],
+                "spared":true,
+                "mqttServerIp": ["192", "168", "12", "12"],
                 "mac": ["90", "A2", "DA", "0F", "96", "FE"]
             },
             "alert_2ndfloor_cam": {
-                "mqttServerIp": ["192", "168", "12", "104"],
+                "mqttServerIp": ["192", "168", "12", "12"],
                 "mac": ["90", "A2", "DA", "0F", "97", "C7"]
             },
             "alert_2ndfloor_a": {
-                "mqttServerIp": ["192", "168", "12", "104"],
+                "mqttServerIp": ["192", "168", "12", "12"],
                 "mac": ["90", "A2", "DA", "0F", "97", "0B"]
             },
             "alert_2ndfloor_b": {
-                "mqttServerIp": ["192", "168", "12", "104"],
+                "mqttServerIp": ["192", "168", "12", "12"],
                 "mac": ["90", "A2", "DA", "0F", "97", "13"]
             },
             "alert_2ndfloor_c": {
-                "mqttServerIp": ["192", "168", "12", "104"],
+                "mqttServerIp": ["192", "168", "12", "12"],
                 "mac": ["90", "A2", "DA", "0F", "96", "CD"]
             },
             "alert_2ndfloor_d": {
-                "mqttServerIp": ["192", "168", "12", "104"],
+                "spared":true,
+                "mqttServerIp": ["192", "168", "12", "12"],
                 "mac": ["90", "A2", "DA", "0F", "97", "C2"]
             }
         },
         "button": {
             "button_ground": {
-                "mqttServerIp": ["192", "168", "12", "104"],
+                "mqttServerIp": ["192", "168", "12", "12"],
                 "mac": ["90", "A2", "DA", "0F", "97", "85"]
             },
             "button_1stfloor": {
-                "mqttServerIp": ["192", "168", "12", "104"],
+                "mqttServerIp": ["192", "168", "12", "12"],
                 "mac": ["90", "A2", "DA", "0F", "97", "81"]
             },
             "button_2ndfloor": {
-                "mqttServerIp": ["192", "168", "12", "104"],
+                "mqttServerIp": ["192", "168", "12", "12"],
                 "mac": ["90", "A2", "DA", "0F", "97", "44"]
             }
         },
